# Nancy

./: README.md
benchmark/logger/: build.sh  nclog_bench.cc  nclog_vs_spdlog.cc
benchmark/pingpong/: build.sh  client  client.cc  client_B.cc  memcpy  memcpy.cc  serv_A  serv_B  server  server.cc  server_A.cc  server_plus.cc
benchmark/qps/: build.sh  client.cc  server.cc
demo/: build.sh  demo
demo/echo/: build.sh  echo_client.cc  echo_server.cc
include/nancy/base/: memorys.h  timer.h
include/nancy/details/: type_traits.h
include/nancy/http/: parser.h
include/nancy/log/: log.h
include/nancy/net/: creactors.h  fd.h  reactor.h  socket.h  tcp_server.h
include/nancy/net/details/: config.h  signal.h  typedef.h
src/: log.cc  signal.cc
tests/: CMakeLists.txt  build.sh  test  test_creactors.cc  test_log.cc  test_memory.cc  test_memory_quick_alloc.cc  test_reactor.cc  test_tcp_server.cc  test_timer.cc  test_timer_master.cc
tests/logfiles/: test_log1.txt
